tests/sources/should-not-compile/for-not-assigned.c
int x = 10;
int y = 0;

for (int i = 0; i < 10; i + 1)
{
    y = y + i;
}